bug fix and adjust readme and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+--find-links https://download.pytorch.org/whl/cu116
 torch == 1.12.1
+--find-links https://download.pytorch.org/whl/cu116
 torchaudio == 0.12.1
+--find-links https://download.pytorch.org/whl/cu116
 torchvision == 0.13.1
+
 pandas == 1.4.4
+pyglet == 1.5.11
+
