--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ torchvision == 0.13.1
 
 pandas == 1.4.4
 pyglet == 1.5.11
-
+opencv-python == 4.6.0.66
+matplotlib == 3.6.2
+tqdm == 4.64.1
+tensorboard == 2.11.0
+fire == 0.4.0
